fixed the div card results and overflow of text from sizing, pictures arent centering perfectly so using padding 100px at the moment

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -36,7 +36,15 @@ html, body{
 .card-body{
     background-color: white;
     opacity: .7;
+    overflow: hidden;
 
+}
+.card {
+    padding-top: 100px;
+}
+.card-text {
+    height: 150px;
+    overflow: hidden;
 }
 
 #formz{
